# NRSS

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  BACKEND_UPGRADE_GUIDE.md  CUPY_RSOXS_BACKEND_SPEC.md  CUPY_RSOXS_DIRECT_POLARIZATION_OPTIMIZATION.md  CUPY_RSOXS_OPTIMIZATION_LEDGER.md  CUPY_RSOXS_Z_COLLAPSE_PROPOSAL.md  LICENSE  PHASE0_TEST_STRATEGY_DRAFT.md  README.md  REPO_UPGRADE_PLAN.md  UPGRADE_ROADMAP.md  environment.yml  index.html  pyproject.toml  setup.py  setup_py.old
.github/workflows/: auto-versioning.yml  ci-smoke.yml  publish-docs.yml  publish-to-pypi.yml
NRSS/: __init__.py  absorption.py  checkH5.py  generateConstants.py  morphology.py  reader.py  visualizer.py  writer.py
_includes/: ntd2d_variants.html
docs/: environment_docs.yaml  environment_docs.yml  requirements.txt  requirements_docs.txt
docs/source/: conf.py  cyrsoxs.rst  gettingstarted.rst  index.rst  installation.rst  tutorials.rst
docs/source/api/: NRSS.generateConstants.rst  NRSS.morphology.rst  NRSS.reader.rst  api.rst  cyrsoxs.rst
en/10_merge/: genindex.html  index.html  search.html  searchindex.js
en/12-incorporate-and-review-kkcalc-tutorials/: searchindex.js
en/13-incorporate-and-review-polymer-adsorption-tutorial/: searchindex.js
en/14-transfer-documentation-for-visualizer/: genindex.html
en/15-energy-and-q-dependent-attenuation-correction-via-post-processing/: genindex.html  objects.inv  py-modindex.html  searchindex.js
en/20-replace-visualizer-method-docstring-duplication-with-copy_doc-decorator/: genindex.html
en/26-add-tutorial-for-polymer-grafted-nanoparticles/: py-modindex.html
en/30-add-date-based-versioning/: .buildinfo  search.html  searchindex.js
en/33-make-package-pypi-installable/: index.html
en/45-slight-display-glitch-with-kkcalc-for-pm6-y6/: genindex.html
en/51-add-opv-tutorial/: index.html
en/9-docs-to-nist-pages/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/backend_cupy-cyrsoxs-clone/: .buildinfo  index.html  objects.inv  searchindex.js
en/backend_cupy-cyrsoxs-clone-vizualizer-updates/: genindex.html  objects.inv  py-modindex.html  searchindex.js
en/guyer-patch-1/: py-modindex.html  search.html  searchindex.js
en/latest/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
en/main/: genindex.html  index.html  objects.inv  search.html  searchindex.js
en/rsoxs-tutorial/: genindex.html  searchindex.js
en/test_phase0-pytest-hardening/: genindex.html
en/tutorial/: searchindex.js
optimization/cupy_rsoxs/: README.md  accepted_state.md  backend_spec.md  benchmarking_guide.md  direct_polarization_minimal_history.md  fast_approximations.md  memory_footprint_remaining_options.md  remaining_untried_ideas.md  shared_reusable_staging_branch_plan.md  tensor_coeff_minimal_history.md  validation_and_status.md
scripts/: run_local_test_report.sh  run_physics_validation_suite.py
scripts/validation_diagnostics/: README.md  analytical_disk_form_factor_diagnostic.py  calibrate_2d_validation_replicates.py  core_shell_reference_diagnostic.py  orientational_contrast_tiny_diagnostic.py  sphere_centering_diagnostic.py  sphere_diameter_fit_diagnostic.py  sphere_fftigor_qmap_diagnostic.py  sphere_flat_detector_analytic_diagnostic.py  sphere_minima_scaling_diagnostic.py  sphere_orientational_contrast_diagnostic.py  sphere_projection_diagnostics.py  sphere_scatter_approach_diagnostic.py
src/NRSS/: __init__.py  _version.py  checkH5.py  material_contracts.py  morphology.py  reader.py  visualizer.py  writer.py
tests/: conftest.py  path_matrix.py
tests/smoke/: test_smoke.py
tests/validation/: test_2d_disk_contrast_scaling.py  test_CoreShell.py  test_analytical_2d_disk_form_factor.py  test_analytical_sphere_form_factor.py  test_bragg_2d_lattice.py  test_bragg_3d_lattice.py  test_core_shell_reference.py  test_mwcnt_reference.py  test_nrss_integrator_2d_disk_form_factor.py  test_nrss_integrator_sphere_form_factor.py  test_proj_sphere.py  test_sphere_contrast_scaling.py  test_sphere_orientational_contrast_scaling.py
tutorials/3D_polymer_adsorption/: 01_polymer_adsorption_model.ipynb  02_polymer_adsorption_functions.ipynb  03_polymer_adsorption_sweeps.ipynb  04_polymer_adsorption_sweep_streamlined.ipynb  polymer_adsorption_functions01.py  siox_iso_NIST_Jan2024.txt
tutorials/kkcalc_for_NRSS/: kkcalc_ps_pmma_xr.ipynb  pm6_nexafs.txt  y6_molecular.txt
tutorials/polymer_grafted_nanoparticles/: Au.txt  parametric_pgn_model.ipynb  pgn_model.py
tutorials/pybind/: MorphologyClass.ipynb
(+257 files in other folders)
