[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NRSS"
description = "NIST RSoXS Simulation Suite"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Dean DeLongchamp", email = "dean.delongchamp@nist.gov" },
    { name = "Peter Dudenas", email = "peter.dudenas@nist.gov" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cupy-cuda12x",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "PyHyperScattering>=0.1.7",
    "scikit-image",
    "scipy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/usnistgov/NRSS/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/NRSS/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: fast smoke tests for environment and basic runtime sanity",
    "cpu: CPU-safe smoke tests for validator, I/O, and basic contract behavior",
    "gpu: tests that require GPU hardware or GPU-only dependencies",
    "slow: long-running tests",
    "backend_agnostic_contract: tests that exercise NRSS behavior without depending on a specific backend runtime",
    "backend_specific: tests that exercise the selected NRSS backend runtime path",
    "cyrsoxs_only: tests that require the legacy CyRSoXS backend or CLI compatibility surface",
    "path_matrix: maintained peer-path test that expands across the selected computation paths",
    "path_subset(*path_ids): maintained path-aware test limited to the named computation paths",
    "reference_parity: tests whose assertions encode CyRSoXS-compatible reference behavior",
    "physics_validation: physics-facing validation tests for scattering behavior and analytical comparisons",
    "experimental_validation: validation tests gated against experimental reference data",
    "toolchain_validation: validation tests that exercise the pybind-to-reduction workflow end to end",
]
